--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /********f************
     
-    Project 1 Stylesheet
+    Project 4 Stylesheet
     Name: Adewumi Tosin
     Date: 20th October, 2024
     Description: Project 4 (Website Deployment)
@@ -259,7 +259,7 @@ a{
     cursor: grab;
 } 
 
-    .box1 h2, #box h2 {
+    .box1 h2, #box h2, #box2 h2, #box3 h2 {
         background-color: rgba(102, 0, 102, 0.4);
         border-radius: 10px;
         text-align: center;
