--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
     background: linear-gradient(45deg,#343434,#402029,#36454f,#353839,#100C08,#1E1E1E) 0 0 / 1000% no-repeat;*/
     background: linear-gradient(45deg, #cb60b3, #a14a8a, #873971, #6c2c5d, #502245) 0 0 / 1000% no-repeat;
     animation: animate 3s ease infinite;
+    height: 100%;
 }
 
 header{
@@ -126,12 +127,14 @@ header h1{
 
 #aboutWrapper{
     background-image: url("images/ff.jpeg");
+    height: 100%;
 }
 #skillsWrapper{
     background-image: url("images/bd.jpeg");
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    height: 100%;
 }
 #box {
     height: 200px;
@@ -185,6 +188,7 @@ header h1{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    height: 100%;
 }
 
 .picBox{
